overhaul actions, verify contents of downloaded binaries in tests

--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -1,23 +1,16 @@
-name: Test
+name: Lint workflows
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - "*"
+    paths:
+      - ".github/workflows/*"
 
   workflow_dispatch: {}
 
 jobs:
-  race-test:
-    timeout-minutes: 25
-    strategy:
-      matrix:
-        # test with minimum supported and latest version of Go
-        go-version: [1.18.x, 1.20.x]
+  lint-workflows:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,14 +23,12 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ${{ env.GO_VERSION }}.x
           check-latest: true
           cache: true
 
-      - name: Ensure main package builds
+      - name: Lint workflow files
         run: |
-          go build
-
-      - name: Run tests
-        run: |
-          go test -race -timeout 20m ./...
+          echo "::add-matcher::.github/actionlint-matcher.json"
+          go install github.com/rhysd/actionlint/cmd/actionlint@latest
+          actionlint
