--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,9 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: weekly
+      interval: daily
   - package-ecosystem: gomod
     open-pull-requests-limit: 5
     directory: /
     schedule:
-      interval: weekly
+      interval: daily
