make sure workflows are linted in PRs

--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -4,6 +4,11 @@ on:
   push:
     paths:
       - ".github/workflows/*"
+  pull_request:
+    branches:
+      - "*"
+    paths:
+      - ".github/workflows/*"
 
   workflow_dispatch: {}
 
