use reusable workflows (#14)
* use reusable workflows

* add more linters, fix linter warning

* remove golangci-lint config for now

* fix tests failing with Go 1.21

* make sure workflows are linted in PRs

* ensure workflows aren't linted twice

--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -2,6 +2,13 @@ name: Lint workflows
 
 on:
   push:
+    branches:
+      - master
+    paths:
+      - ".github/workflows/*"
+  pull_request:
+    branches:
+      - "*"
     paths:
       - ".github/workflows/*"
 
@@ -9,26 +16,6 @@ on:
 
 jobs:
   lint-workflows:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Export constant environmental variables
-        uses: cardinalby/export-env-action@v2
-        with:
-          envFile: .github/workflows/constants.env
-
-      - name: Install Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}.x
-          check-latest: true
-          cache: true
-
-      - name: Lint workflow files
-        run: |
-          echo "::add-matcher::.github/actionlint-matcher.json"
-          go install github.com/rhysd/actionlint/cmd/actionlint@latest
-          actionlint
+    permissions:
+      contents: read
+    uses: capnspacehook/go-workflows/.github/workflows/lint-actions.yml@master
